@@ -1,1 +1,6 @@
-<h1>categories layout component</h1>
+<gp-categoriesTopNavBar>Loading...</gp-categoriesTopNavBar>
+<gp-categoriesSecondTopNav>Loading...</gp-categoriesSecondTopNav>
+
+
+
+<gp-categoriesBottomNav>Loading...</gp-categoriesBottomNav>
