@@ -3,7 +3,7 @@
 <!-- Header (could not figure out how to use bootstraps grid for this scenario) -->
 <div class="gp__header-wrapper overflow-hidden">
     <div class="gp__header-left vh-100 d-flex flex-column justify-content-center align-items-center">
-        <div class="d-flex flex-column fw-bolder text-black">
+        <div class="d-flex flex-column fw-900 text-black">
             <span>Daily</span>
             <span>essentials</span>
             <span>delivered in</span>
@@ -41,7 +41,7 @@
     <p class="fw-bolder gp__header-text">Browse A Popular Category</p>
 </div>
 <div class="d-flex justify-content-center mt-0">
-    <a routerLink="categories" class="text-decoration-none gp__shopping-text fs-4 fw-bold">Start Shopping →</a>
+    <a routerLink="categories" class="gp__shopping-text fs-4 fw-bold">Start Shopping →</a>
 </div>
 
 
