@@ -1,0 +1,20 @@
+.navbar {
+  border-top: 1px solid #ececec;
+}
+
+p {
+  margin-bottom: 0;
+  font-size: 14px;
+  color: #919ca1;
+  font-weight: 600;
+}
+
+.active {
+  color: #00a4ff;
+}
+
+.gp__btn {
+  background-color: white;
+  border: none;
+  padding: 0;
+}
