@@ -1,0 +1,14 @@
+<nav class="navbar navbar-light bg-white fixed-bottom d-flex justify-content-around">
+    <button class="gp__btn">
+        <img src="../../../../assets/footer-reskin-home-on.png" width="54" height="56" alt="">
+        <p class="active">Home</p>
+    </button>
+    <button class="gp__btn">
+        <img src="../../../../assets/footer-reskin-bag-off.png" width="54" height="56" alt="">
+        <p>My Bag</p>
+    </button>
+    <button class="gp__btn">
+        <img src="../../../../assets/footer-reskin-dollar-off.png" width="54" height="56" alt="">
+        <p>Referals</p>
+    </button>
+</nav>
