@@ -1,0 +1,10 @@
+import { Component } from '@angular/core';
+
+@Component({
+  selector: 'gp-categoriesBottomNav',
+  templateUrl: './categories-bottom-nav.component.html',
+  styleUrls: ['./categories-bottom-nav.component.css'],
+})
+export class CategoriesBottomNavComponent {
+  constructor() {}
+}
