@@ -1,0 +1,29 @@
+.navbar {
+  margin-top: 1px;
+  padding: 1rem;
+  height: fit-content;
+  font-size: 14px;
+  vertical-align: middle;
+}
+
+p {
+  margin: 0;
+  padding-top: 0.05rem;
+  color: #4682b6;
+}
+
+.gp__vr {
+  color: #dddddd;
+}
+
+.gp__addr {
+  color: #00a4ff;
+  text-decoration: none;
+}
+
+.gp__mins {
+  color: #26617b;
+  font-weight: 700;
+  font-size: 15px;
+  letter-spacing: 0.01rem;
+}
