@@ -1,0 +1,7 @@
+<nav class="navbar navbar-light bg-light justify-content-center py-0 my-0 align-items-center">
+    <div class="d-flex flex-row gp__delivery py-1">
+        <p>Deliver to <a class="gp__addr">123 Address St</a></p>
+        <p class="px-2 gp__vr">|</p>
+        <p class="gp__mins">in 20 - 30 minutes</p>
+    </div>
+</nav>
