@@ -1,0 +1,11 @@
+import { Component } from "@angular/core";
+
+@Component({
+    selector: 'gp-categoriesSecondTopNav',
+    templateUrl: 'categoriesSecondTopNavBar.component.html',
+    styleUrls: ['categoriesSecondTopNavBar.component.css']
+})
+
+export class CategoriesSecondTopNavBar {
+
+}
