@@ -1,0 +1,24 @@
+<nav class="navbar navbar-light sticky-top gp__cat-top-nav">
+    <div class="d-flex justify-content-start float-left align-items-center ms-2 py-1">
+        <img src="../../../assets/hamburger.png" alt="" width="18" height="14"
+            class="align-text-top me-3 gp__hamburger">
+        <img src="../../../assets/Gopuff-logo-reskin-white.svg" alt="" width="95" height="35"
+            class="align-text-top gp__nav-logo">
+    </div>
+
+    <div class="gp__search-container">
+        <table class="gp__search-elements-container">
+            <tr>
+                <td>
+                    <input type="text" class="gp__search" placeholder="Search">
+                </td>
+                <td>
+                    <button class="gp__search-btn"><img src="../../../assets/search-icon.svg" alt="" width="21"
+                            height="21"></button>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="gp__empty-div"></div>
+</nav>
