@@ -1,0 +1,11 @@
+import { Component } from "@angular/core";
+
+ @Component({
+     selector: 'gp-categoriesTopNavBar',
+     templateUrl: 'categoriesTopNavBar.component.html',
+     styleUrls: ['categoriesTopNavBar.component.css']
+ })
+ 
+ export class CategoriesTopNavBarComponent {
+
+ }
