@@ -11,6 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Raleway" !important;
 }
 
 html,
@@ -19,7 +20,6 @@ body {
 }
 body {
   margin: 0;
-  font-family: "Raleway", sans-serif !important;
 }
 
 body p {
